# gazette-processor

./: .coverage  .gitignore  CLAUDE.md  README.md  bb_logic.py  enhanced_ocr.py  header.tex  install_script.sh  notices.csv  pyproject.toml  streamlit_app.py  validation_helpers.py
docs/: how_to_run_the_system_on_a_remote_box.txt
expected_similar_to_outputs/: more_files.txt  st20250021_to format.docx
src/ongoing_convo_with_bronn_2025_06_10/: __init__.py  cached_llm.py  common_types.py  pdf_parser_multi_leading_r_notice.py  pdf_parser_multi_notice.py  pdf_parser_single_notice.py  prints.py  utils.py  utils_2.py  validation_helpers.py
stubs/easyocr/: __init__.pyi
stubs/icecream/: __init__.pyi
stubs/pytesseract/: __init__.pyi
tests/: test_bb_logic.py  test_cached_llm.py  test_init.py  test_utils.py
utils/: smoke_test_all_gg_files.py  test.sh
