[project]
name = "ongoing-convo-with-bronn-2025-06-10"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David", email = "wizzardx@gmail.com" }
]
dependencies = [
    "pytest>=8.4.0",
    "pdfplumber>=0.11.6",
    "typeguard>=4.4.3",
    "icecream>=2.1.4",
    "pymupdf>=1.26.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
    "numpy>=2.3.0",
    "click>=8.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "easyocr>=1.7.2",
    "pydantic>=2.11.5",
    "pytest-cov>=6.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ongoing_convo_with_bronn_2025_06_10"]
