[project]
name = "ongoing-convo-with-bronn-2025-06-10"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David", email = "wizzardx@gmail.com" }
]
dependencies = [
    "pytest>=8.4.0",
    "pdfplumber>=0.11.6",
    "typeguard>=4.4.3",
    "icecream>=2.1.4",
    "pymupdf>=1.26.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
    "numpy>=2.3.0",
    "click>=8.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "easyocr>=1.7.2",
    "pydantic>=2.11.5",
    "pytest-cov>=6.1.1",
    "mypy>=1.16.0",
    "environs>=14.2.0",
    "requests>=2.32.4",
    "anthropic>=0.34.0",
    "streamlit>=1.45.1",
    "streamlit-cookies-manager>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "scipy-stubs>=1.15.3.0",
    "types-colorama>=0.4.15.20240311",
    "types-defusedxml>=0.7.0.20250516",
    "types-networkx>=3.5.0.20250610",
    "types-protobuf>=6.30.2.20250516",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20250516",
    "isort>=6.0.1",
    "black>=25.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ongoing_convo_with_bronn_2025_06_10"]

[tool.mypy]
mypy_path = "stubs"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--strict-markers",
]
